tests/flat_file/ui/auto_plugin_missing_param.stderr
error: auto_plugin requires a function taking at least one parameter
 --> tests/flat_file/ui/auto_plugin_missing_param.rs:3:1
  |
3 | #[auto_plugin]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `auto_plugin` (in Nightly builds, run with -Z macro-backtrace for more info)
