tests/flat_file/ui/auto_plugin_missing_param.rs
use bevy_auto_plugin::modes::flat_file::prelude::*;

#[auto_plugin]
fn plugin() {}

// dummy main
fn main() {}
